Add month selector

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,18 @@
 {
     "appName": "MyAccounts",
+    "accountPeriod": "Period",
+    "january": "January",
+    "february": "February",
+    "march": "March",
+    "april": "April",
+    "may": "May",
+    "june": "June",
+    "july": "July",
+    "agust": "Agust",
+    "september": "September",
+    "october": "October",
+    "november": "November",
+    "dicember": "Dicember",
     "accountNameField": "Account name",
     "accountNameFieldPlaceholder": "Ex. Food",
     "accountNameRequiredError": "Account name is required",
