--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,5 +1,18 @@
 {
     "appName": "MisCuentas",
+    "accountPeriod": "Periodo",
+    "january": "Enero",
+    "february": "Febrero",
+    "march": "Marzo",
+    "april": "Abril",
+    "may": "Mayo",
+    "june": "Junio",
+    "july": "Julio",
+    "agust": "Agusto",
+    "september": "Septiembre",
+    "october": "Octubre",
+    "november": "Noviembre",
+    "dicember": "Diciembre",
     "accountNameField": "Nombre de la cuenta",
     "accountNameFieldPlaceholder": "Ej. Comidas",
     "accountNameRequiredError": "Es requerido un nombre para la cuenta",
