--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -33,5 +33,8 @@
     "accountMovementDescription": "Description",
     "accountMovementDescriptionError": "Movement name is required",
     "accountMovementAmount": "Amount",
-    "accountMovementAmountError": "Amount must be gather than 0"
+    "accountMovementAmountError": "Amount must be gather than 0",
+
+    "loading": "Loading",
+    "errorOnSignInWithGoogle": "Attempt sign in error with Google provider."
 }
