--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -33,5 +33,8 @@
     "accountMovementDescription": "Descripción",
     "accountMovementDescriptionError": "La descripción del movimiento es necesaria",
     "accountMovementAmount": "Monto",
-    "accountMovementAmountError": "La cantidad debe ser mayor a 0"
+    "accountMovementAmountError": "La cantidad debe ser mayor a 0",
+
+    "loading": "Cargando",
+    "errorOnSignInWithGoogle": "Error al intentar iniciar sesión con el provedor de Google."
 }
