Add Cancel movement button

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -23,6 +23,7 @@
     "accountOutcomesFieldPlaceholder": "Initial expense",
     "accountBudgetField": "Budget",
     "saveButton": "Save",
+    "cancelButton": "Cancel",
 
     "accountMovementsTitle": "Movements",
     "accountMovementIncomeType": "INCOME",
