Add h2 account and sticky header

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
     "appName": "MyAccounts",
+    "accountTitle": "Account",
     "accountPeriod": "Period",
     "january": "January",
     "february": "February",
