--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,5 +1,6 @@
 {
     "appName": "MisCuentas",
+    "accountTitle": "Cuenta",
     "accountPeriod": "Periodo",
     "january": "Enero",
     "february": "Febrero",
