--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
     "appName": "MyAccounts",
-    "accountTitle": "Account",
+    "addNewRecordLabel": "Add record",
+    "accountTitle": "Expense record",
     "accountPeriod": "Period",
     "january": "January",
     "february": "February",
@@ -14,15 +15,15 @@
     "october": "October",
     "november": "November",
     "dicember": "Dicember",
-    "accountNameField": "Account name",
-    "accountNameFieldPlaceholder": "Ex. Food",
-    "accountNameRequiredError": "Account name is required",
-    "accountIncomesField": "Incomes",
+    "accountNameField": "Name or identifier",
+    "accountNameFieldPlaceholder": "Ex. Entertainment",
+    "accountNameRequiredError": "Name or identifier is required",
+    "accountBudgetField": "Budget",
     "accountIncomesFieldPlaceholder": "Initial income",
     "accountIncomesRequiredError": "Income grather than 0 is required",
     "accountOutcomesField": "Outcomes",
     "accountOutcomesFieldPlaceholder": "Initial expense",
-    "accountBudgetField": "Budget",
+    "acountRemainingLabel": "Remaining",
     "saveButton": "Save",
     "cancelButton": "Cancel",
 
