--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,6 +1,7 @@
 {
     "appName": "MisCuentas",
-    "accountTitle": "Cuenta",
+    "addNewRecordLabel": "Agregar registro",
+    "accountTitle": "Registro de gastos",
     "accountPeriod": "Periodo",
     "january": "Enero",
     "february": "Febrero",
@@ -14,15 +15,15 @@
     "october": "Octubre",
     "november": "Noviembre",
     "dicember": "Diciembre",
-    "accountNameField": "Nombre de la cuenta",
-    "accountNameFieldPlaceholder": "Ej. Comidas",
-    "accountNameRequiredError": "Es requerido un nombre para la cuenta",
-    "accountIncomesField": "Ingresos",
+    "accountNameField": "Nombre o identificador",
+    "accountNameFieldPlaceholder": "Ej. Entretenimiento",
+    "accountNameRequiredError": "Es requerido un nombre o identificador",
+    "accountBudgetField": "Presupuesto",
     "accountIncomesFieldPlaceholder": "Ingreso inicial",
     "accountIncomesRequiredError": "El ingreso debe ser mayor a 0",
     "accountOutcomesField": "Gastos",
     "accountOutcomesFieldPlaceholder": "Gasto inicial",
-    "accountBudgetField": "Presupuesto",
+    "acountRemainingLabel": "Restante",
     "saveButton": "Guardar",
     "cancelButton": "Cancelar",
 
